// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expensesSummary 1`] = `
<p>
  Viewing 
  3
   expenses totalling 
  $1,141.95
</p>
`;

exports[`should render expensesSummary for empty list 1`] = `
<p>
  Viewing 
  0
   expenses totalling 
  $0.00
</p>
`;
